writing on chapter introduction

--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -67,7 +67,52 @@
     \end{center}
 \end{titlepage}
 
-% Inhaltsverzeichnis
+\tableofcontents
+
+\newpage
+
+\section{Erklärung}
+
+
+\newpage
+
+
+\section{Verzeichnis häufig verwendeter Symbole und Abkürzungen}
+
+\newpage
+
+\section{Einführung}
+
+% https://deliverypdf.ssrn.com/delivery.php?ID=741072022102025091073125113103087026048056000029024069069006024045033044114095010039039074015127039038088084074028113120004096071122104086004095015124005018003010012023052041098045084086104027117119025110095086024026081088092106122086093064003097016028011065000109108116004064022082122002124&EXT=pdf&INDEX=TRUE
+
+In der größten bisher durchgeführten Studie zu Klimaangst von jungen Menschen behaupten 45\% der Befragten, dass ihre Gefühle bezüglich des Klimawandels ihr tägliches Leben negativ beeinflussen. Ohne jede Zweifel stellt der Klimawandel uns und die uns folgenden Generationen vor eine nicht zu unterschätzende Herausforderung. Angefangen mit der Tatsache, dass die alleinige Diskussion darüber nicht selten zu einer Spaltung und Polarisierung der Gesellschaft führt. Folglich leitet die hitzige und emotionale Debatte dazu, dass die gegensätzlichen Lager sich immer weiter voneinander entfernen und somit jegliche Grundlage für eine zielführende Diskussion entreißen.
+
+Auf der einen Seite werden die Befürchtungen der anderen für übertrieben, unwichtig und paranoid gehalten. Wissenschaftliche Unsicherheiten werden verwendet, um gesamte Ergebnisse von Studien als unzuverlässig einzustufen. Modelle werden in der Wissenschaft oft vereinfacht, denn die Isolation und Fokussierung auf bestimmte Aspekte kann helfen, um ein besseres Verständnis von Phänomenen in der Natur zu erlangen. Auf Grund von dieser Vereinfachung werden die Klimamodelle als zu ausdruckslos betitelt, um die Komplexität des Klimas von unserem Planeten widerzuspiegeln. Dementsprechend seien die Schlussfolgerungen aus den Studien unzutreffend. Investitionen mehrerer Milliardenbeträge seien nicht gerechtfertigt und politische Vorgaben schaden dem eigenem Land mehr, als dass sie dem Planeten helfen würden.
+
+Am gegenüberliegenden Ufer wird gemahnt, die Ernsthaftigkeit der Situation nicht zu unterschätzen. Gewarnt wird, dass die Konsequenzen des Klimawandels irreversibel seien, weswegen Treibhausgase unverzüglich auf ein Minimum reduziert werden sollten. Um Folgen wie das Abschmelzen der Eisschilde und Gletscher, das Aussterben verschiedenster Tierarten und der Anstieg des Meeresspiegels zu verhindern, spielen erneuerbare Energien eine entscheidende Rolle. Im Gegensatz zu fossilen Energieträgern erzeugen die Erneuerbaren keine oder nur kaum Treibhausgasemissionen. Bis 2030 sollen die regenerativen Energien 80\% des Strombedarfs Deutschlands decken. Da die Möglichkeiten der Energieerzeugung in Deutschland durch Wasserkraft und Biomasseverbrennung schon heute nahezu ausgeschöpft sind, bilden Solar- und Windenergie einen wichtigen Grundpfeiler um die Ausbauziele zu erreichen. 
+
+Ebenso komplex wie die Klimamodelle, die die Verstrickungen verschiedenster Phänomene in unserer Natur berücksichtigen sollen, ist die Transformation unseres Stromnetzes. In einem Netz, welches dafür ausgelegt wurde, dass wenige größere Kraftwerke Strom einspeisen, werden künftig immer mehr kleinere, dezentrale Kraftwerke mitwirken.
+
+
+% https://zeitung.faz.net/fas/technik-und-motor/2023-05-14/fuenf-am-tag/892835.html
+
+\subsection{Schwankungen im Stromnetz}
+
+Dementsprechend ist es für uns unverzichtbar, die Wichtigkeit einer stabilen \linebreak Stromerzeugung richtig einzuschätzen und anhand dessen Maßnahmen zu ergreifen, um Spannungsschwankungen im Netz so gut wie möglich zu reduzieren.
+
+\subsection{Maschinelles Lernen}
+
+\section{Stand der Technik}
+
+\newpage
+
+\section{Wichtige Faktoren bei der Stromerzeugung durch Solarenergie}
+
+
+\subsection{Wetter-unabhängige Faktoren}
+
+
+\subsection{Wetter-abhängige Faktoren}
 
 
 
