--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -67,21 +67,25 @@
     \end{center}
 \end{titlepage}
 
+
+\newpage
+
+\section*{Erklärung}
+
+
+\newpage
+
+
+\section*{Verzeichnis häufig verwendeter Symbole und Abkürzungen}
+
+\newpage
+
 \tableofcontents
 
-\newpage
-
-\section{Erklärung}
-
 
 \newpage
+\setcounter{section}{0}
 
-
-\section{Verzeichnis häufig verwendeter Symbole und Abkürzungen}
-
-
-
-\newpage
 
 \section{Einführung}
 
