--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -119,6 +119,8 @@ Dementsprechend ist es für uns unverzichtbar, die Wichtigkeit einer stabilen \l
 
 \section{Eigene Fragestellung und methodisches Vorgehen}
 
+\newpage
+
 \section{Wichtige Faktoren bei der Stromerzeugung durch Solarenergie}
 
 Bevor der Stromertag einer Photovoltaikanlage mit Hilfe von künstlicher Intelligenz berechnet werden soll, ist es von immenser Bedeutung die maßgeblichen Faktoren herauszufinden. Wenn ein Modell eingelernt werden soll, können zu viele Faktoren zum \textit{Fluch der Dimensionen} führen. Dieser besagt, dass zu viele Merkmale 
