--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -68,17 +68,24 @@
 \end{titlepage}
 
 
+\newpage
+
+\section*{Erklärung}
+
+
+\newpage
+
+
+\section*{Verzeichnis häufig verwendeter Symbole und Abkürzungen}
+
+\newpage
+
+\tableofcontents
 
 
 \newpage
 \setcounter{section}{0}
 
-
-\section{Verzeichnis häufig verwendeter Symbole und Abkürzungen}
-
-\tableofcontents
-
-\newpage
 
 \section{Einführung}
 
@@ -94,7 +101,7 @@ Ebenso komplex wie die Klimamodelle, die die Verstrickungen verschiedenster Phä
 
 Die Relevanz der Abschlussarbeit basiert auf der Annahme, dass eine genauere Prognose über die erzeugte Strommenge helfen würde das Stromnetz zu stabilisieren und Netzschwankungen, ergo das Risiko eines Brown- oder sogar Black-Outs zu minimieren. Anhand der neu gewonnenen
 Information könnten kurzfristige Stromimporte beziehungsweise -exporte besser reguliert werden. Ebenso wäre es denkbar, dass man für die Industrie und/ oder Endverbraucher mehr Anreize schafft ihren Stromverbrauch zu einem gewissen Grad an die Verfügbarkeit des Stroms
-anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls Hilfreich wäre.
+anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls hilfreich wäre.
 
 % https://zeitung.faz.net/fas/technik-und-motor/2023-05-14/fuenf-am-tag/892835.html
 
@@ -116,7 +123,7 @@ Dementsprechend ist es für uns unverzichtbar, die Wichtigkeit einer stabilen \l
 
 \section{Wichtige Faktoren bei der Stromerzeugung durch Solarenergie}
 
-Bevor der Stromertag einer Photovoltaikanlage mit Hilfe von künstlicher Intelligenz berechnet werden soll, ist es von immenser Bedeutung die maßgeblichen Faktoren herauszufinden. Wenn ein Modell eingelernt werden soll, können zu viele Faktoren zum \textit{Fluch der Dimensionen} führen. Dieser besagt, dass zu viele Merkmale 
+Bevor der Stromertag einer Photovoltaikanlage mit Hilfe von künstlicher Intelligenz berechnet werden soll, ist es von immenser Bedeutung die maßgeblichen Faktoren herauszufinden. Wenn ein Modell eingelernt werden soll, können zu viele Faktoren zum \textit{Fluch der Dimensionen} führen. Dieser besagt, dass zu viele Merkmale dazu verleiten Muster und Strukturen sich schwerer erkennen lassen. Die Datenpunkte sind durch die Größe des mehrdimensionalen Raums weiter voneinander entfernt, wodurch die Interpretierbarkeit komplexer wird.
 
 % https://www.visualcrossing.com/resources/documentation/weather-data/how-to-obtain-solar-radiation-data/
 
