--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -113,11 +113,21 @@ anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls
 
 Dementsprechend ist es für uns unverzichtbar, die Wichtigkeit einer stabilen \linebreak Stromerzeugung richtig einzuschätzen und anhand dessen Maßnahmen zu ergreifen, um Spannungsschwankungen im Netz so gut wie möglich zu reduzieren.
 
-\subsection{Maschinelles Lerne}
+\subsection{Maschinelles Lernen}
 
 \newpage
 
 \section{Eigene Fragestellung und methodisches Vorgehen}
+
+Um die zukünftigen Herausforderungen der Energieversorgung zu bewältigen, befasst sich diese Arbeit damit den fluktuierenden Stromerzeuger, die Photovoltaikanlage, so gut wie möglich in unser bestehendes Stromnetz zu integrieren. Die zentrale Fragestellung lautet hierbei, wie man präzise den erzeugten Solarstrom prognostizieren kann. Um dieses Ziel zu erreichen, sollen zuerst entscheidende Parameter ermittelt werden, die die Stromerzeugung einer Solaranlage beeinflussen. Allerdings liegt der Fokus ebenfalls darauf, dass die Berechnung der Prognose für beliebige Photovoltaikanlagen anwendbar ist, indem nur wenige spezifische Informationen über die Anlage in die Berechnung einfließen. Selbstverständlich spielen verschiedenste Eigenschaften der Solaranlage eine entscheidende Rolle, jedoch werden diese im Datenmodell nicht berücksichtigt. Zunehmende Rechenkapazitäten und kostengünstigere Speichermöglichkeiten ermöglichen es, dass für jede einzelne Solaranlage ein eigenes Datenmodell angelegt wird. Somit können die Gegebenheiten der Photovoltaikanlage, wie Quantität und Qualität der Solarpanele, vernachlässigt werden. Ein weiterer Vorteil ist, dass dadurch schwer zu beschaffende Datensätze nicht weiter benötigt werden. Stattdessen wird das Modell fast ausschließlich von Wetterdaten trainiert, welche von verschiedensten Institutionen flächenmäßig und umfangreich aufgezeichnet werden. Die für das Trainieren des maschinellen Lernen Modells benötigten Wetterdaten werden von der Website \textit{https://www.visualcrossing.com} extrahiert. Die Website bietet einen kostenfreien Zugang zu detaillierten historischen Wetterdaten. 
+
+WO SOLARDATEN?
+
+Durch die Literaturrecherche sind bereits die relevanten Faktoren eingegrenzt wurden, allerdings ist exaktere Analyse der Daten unumgänglich. Ebenso gilt es zu überprüfen, ob sich die verschiedenen Merkmale auf unterschiedliche Solaranlagen gleich auswirken. 
+
+Maschinelles Lernen ist eine Technologie, Muster und Zusammenhänge in großen Datenmenge zu verstehen. 
+
+Um die Schwierigkeiten bei der dezentralen Einspeisung von Solarstrom lösen zu können, soll maschinelles Lernen Abhilfe schaffen. Die Technologie verspricht, dass 
 
 \newpage
 
