--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -127,22 +127,20 @@ Durch die Literaturrecherche sind bereits die relevanten Faktoren eingegrenzt wu
 
 Sofern es gelingt, sämtliche sich variierende Parameter herauszufinden, die die Solarproduktion beeinträchtigen, ist maschinelles Lernen eine vielversprechende Technologie um die Stromerzeugung zu prognostizieren. Insbesondere ist zu erwarten, dass sich das Spektrum der Trainingsdaten und das Spektrum während der Produktion (Inbetriebnahme) sich nicht groß voneinander unterscheiden werden.
 
-Eine Unvollkommenheit des Datenmodells ist die Alterung der Solaranlage, welche dazu führt, dass die Leistungsfähigkeit über die Lebenszeit sich reduziert. Wie stark die Alterung jedoch die Prognose beeinträchtigt, lässt sich über den Zeitraum dieser Arbeit von vier Monaten nur schwerlich beurteilen. Mögliche Konsequenzen wären ältere Daten kontinuierlich auszusortieren und mit das Modell mit den Neusten zu aktualisieren. 
+Eine Unvollkommenheit des Datenmodells ist jedoch die Alterung der Solaranlage, welche dazu führt, dass die Leistungsfähigkeit über die Lebenszeit sich reduziert. Wie stark die Alterung jedoch die Prognose beeinträchtigt, lässt sich über den Zeitraum dieser Arbeit von vier Monaten nur schwerlich beurteilen. Mögliche Konsequenzen wären ältere Daten kontinuierlich auszusortieren und mit das Modell mit den Neusten zu aktualisieren. Es ist davon auszugehen, dass der Alterungsprozess sich nur langsam in den Datensätzen bemerkbar machen wird, weshalb er die Ergebnisse über die kurze Zeitspanne kaum verfälschen dürfte.
 
-
-Maschinelles Lernen ist eine Technologie, Muster und Zusammenhänge in großen Datenmenge zu verstehen. 
-
-Um die Schwierigkeiten bei der dezentralen Einspeisung von Solarstrom lösen zu können, soll maschinelles Lernen Abhilfe schaffen. Die Technologie verspricht, dass 
 
 \newpage
 
 \section{Wichtige Faktoren bei der Stromerzeugung durch Solarenergie}
 
-Bevor der Stromertag einer Photovoltaikanlage mit Hilfe von künstlicher Intelligenz berechnet werden soll, ist es von immenser Bedeutung die maßgeblichen Faktoren herauszufinden. Wenn ein Modell eingelernt werden soll, können zu viele Faktoren zum \textit{Fluch der Dimensionen} führen. Dieser besagt, dass zu viele Merkmale dazu verleiten Muster und Strukturen sich schwerer erkennen lassen. Die Datenpunkte sind durch die Größe des mehrdimensionalen Raums weiter voneinander entfernt, wodurch die Interpretierbarkeit komplexer wird.
+Bevor der Stromertag einer Photovoltaikanlage mit Hilfe von künstlicher Intelligenz berechnet werden soll, ist es von immenser Bedeutung die maßgeblichen Faktoren herauszufinden. Wenn ein Modell eingelernt werden soll, können zu viele Faktoren zum \textit{Fluch der Dimensionen} führen. Dieser besagt, dass zu viele Merkmale dazu verleiten Muster und Strukturen sich schwerer erkennen lassen. Die Datenpunkte sind durch die Größe des mehrdimensionalen Raums weiter voneinander entfernt, wodurch die Interpretierbarkeit komplexer wird. Dementsprechend sind die Eingabedaten behutsam auszuwählen.
 
 % https://www.visualcrossing.com/resources/documentation/weather-data/how-to-obtain-solar-radiation-data/
 
 \subsection{Wetter-unabhängige Faktoren}
+
+In Bezug auf die Rahmenparameter der Solaranlage ist die reine Größe selbstverständlich ein maßgeblicher Faktor. 
 
 
 \subsection{Wetter-abhängige Faktoren}
